# steerability

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  Procfile  README.md  README_OLD.md  SUPPORT.md  TRAINING.md  VLLM.md  cache.py  create_steerability_report.py  custom_runners.py  examine_training_probes.ipynb  full_requirements.txt  generate_steerability_probe.py  goals.py  goalspace_server.py  grpo_trainer_patch.py  initial_setup.sh  instruction_generator.py  llm_interactor.py  pyproject.toml  requirements.txt  rewards.py  rl.py  seed_data.py  steer_eval.py  steerability_metrics.py  web-requirements.txt
_site/: README.md  other_index.html  pyproject.toml
_site/config/: qwen3_example.yml
_site/config/uvicorn_defaults/: goalspace_server.yml
_site/config/vllm_defaults/: judge_model.yml  openai_server.yml
_site/docs/: about.html  contact.html  feed.xml  services.html
_site/src/steerability/: cot_extract.ipynb  create_steerability_report.py  custom_runners.py  initial_setup.sh  (+6 more)
_site/team/: index.html
_site/tests/: test_goals.py
config/: accelerate_config_deepzero.yaml  colors.yml  custom_model_example.yml  data_pathspec.yml  gemma3_27b.yml  gemma3_example.yml  gpt_4.1_nano_example.yml  llama3.1_example.yml  llama3.2_example.yml  llama4.yml  mistral_3.1.yml  mixtral.yml  olmo_32b.yml  openchat_3_6.yml  phi_example.yml  qwen3_example.yml
config/experiments/: deepseek_llama_70b_1d.yml  deepseek_llama_70b_cot.yml  deepseek_llama_70b_supercot.yml  deepseek_llama_8b_local.yml  llama3.1_8b_local.yml  llama3.3_70b_local.yml  llama3_8b_local.yml  mockup.yml
config/goalspace_defaults/: normalization.yml
config/probes/: 2d_steer_in_1d_uncorr.yml  2d_steer_uncorr.yml
config/rl/: baby_grpo.yml  baby_grpo_lora.yml  micro_steer_grpo_lora_2d.yml  micro_steer_llama3.1_1d_in_2d.yml  micro_steer_llama3.1_1d_in_2d_cce.yml  micro_steer_llama3.1_1d_in_2d_full.yml
config/seed_data/: magic_numbers.yml
config/vllm_defaults/: judge_model.yml  openai_server.yml
docs/: CNAME  _config.yml  index.html
docs/_site/: index.html
logs/: 196682-vllm.err  196682-vllm.out  198364-vllm.err  198364-vllm.out  199405-vllm.err  199405-vllm.out  200338-vllm.err  200338-vllm.out  202078-uvicorn.out  202078-vllm.err  202078-vllm.out  213035-vllm.err  213035-vllm.out  214034-uvicorn.err  214034-vllm.err  214034-vllm.out  215319-judge.err  215319-judge.out  215319-vllm.err  217111-judge.err  217111-judge.out  218143-judge.err  219410-judge.err  219410-judge.out  220768-judge.err  220768-judge.out  221973-judge.err  221973-judge.out
scripts/: sync_results.sh
src/steerability/: REPLICATION.md  VLLM.md  create_steerability_plots.ipynb  create_steerability_report.py  custom_runners.py  default_probe_settings.yml  evaluate_groundedness.py  generate_matched_steerability_probe.py  generate_steerability_probe.py  goals.py  goalspace_server.py  grpo_trainer_patch.py  instruction_generator.py  llm_interactor.py  llm_launcher.py  load_lora.sh  load_multi_stage.sh  me-as-judge.ipynb  plotting.py  rewards.py  rl.py  searching for sadness.ipynb  steerability_metrics.py  steerability_runners.py  test_vllm_server.py  training "tracks".ipynb
src/steerflow/: __main__.py  app.py  plotting_utils.py  render.yaml  web-requirements.txt  wsgi.py
static/: _field.json
utils/: extract_probe_from_old_results.py  llm_extract_cot.py  model_output_cleaner.py  train_config_dataclasses.py
(+452 files in other folders)
